--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Chia-Ming Lee"
+title                    : "Chia-Ming Chris Lee"
 description              : "CV/DL Researcher"
 repository               : "ming053l/ming053l.github.io"
 google_scholar_stats_use_cdn : False
