--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Chia-Ming Lee"
+  name             : "Chia-Ming Chris Lee"
   avatar           : "images/chiaminglee.png"
   bio              : "National Cheng Kung University (NCKU)"
   location         : "Tainan, Taiwan"
