--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Chia-Ming Lee"
-  avatar           : "images/chiaminglee.png"
-  bio              : "National Cheng Kung University (NCKU)"
+  avatar           : "images/personal_profile.png"
+  bio              : "National Yang Ming Chiao Tung University (NYCU)"
   location         : "Tainan, Taiwan"
   employer         :
   pubmed           : 
