--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   name             : "Chia-Ming Lee"
   avatar           : "images/personal_profile.png"
   bio              : "National Yang Ming Chiao Tung University (NYCU)"
-  location         : "Tainan, Taiwan"
+  location         : "Hsinchu, Taiwan"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=koBVaaUAAAAJ"
