--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Chia-Ming Lee"
-  avatar           : "images/personal_profile.png"
+  avatar           : "images/personal_profile.jpg"
   bio              : "National Yang Ming Chiao Tung University (NYCU)"
   location         : "Hsinchu, Taiwan"
   employer         :
